Desenvolvimento -> Feito o get na receitaws. Ajustato escopo do projeto com o formulário.

--- a/forms/Cadastro Representante/style.css
+++ b/forms/Cadastro Representante/style.css
@@ -6,3 +6,8 @@
 #fluig-style-guide .margin-left {
     margin-left: 20px;
 }
+
+#fluig-style-guide .btn-pesquisar-representate {
+    margin-top: 25px;
+    float: right;
+}
